# sdk-cpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .openapi-generator-ignore  CMakeLists.txt  Cargo.toml  README.md  bootstrap.ps1  premake5.lua
.openapi-generator/: FILES
config/: cbindgen.toml
examples/: main.cpp  premake5.lua
include/: tribufu.h
include/tribufu/: api.h  base.h  client.h  defines.h  http.h  json.h  macros.h  native.h  oauth2.h  options.h  pch.h  platform.h  prelude.h  sdk.h  server.h  std.h
include/tribufu++/: AnyType.h  ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h  sdk.h
scripts/: cbindgen.ps1  cmake.ps1  generate.ps1  gmake.sh  msbuild.ps1  premake.bat  premake.sh
src/: AnyType.cpp  ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp  api.cpp  client.cpp  oauth2.cpp  options.cpp  pch.cpp  premake5.lua  sdk.cpp  server.cpp
src/api/: TribufuGeneratedApi.cpp
src/model/: Account.cpp  Application.cpp  ApplicationType.cpp  AuthorizeRequest.cpp  CodeChallengeMethod.cpp  CryptoViewModel.cpp  Game.cpp  GameServer.cpp  GameServerCluster.cpp  GrantType.cpp  Group.cpp  GroupGame.cpp  GroupMember.cpp  GroupRank.cpp  HashViewModel.cpp  IntrospectRequest.cpp  IpAddress.cpp  LeaderboardItem.cpp  LeaderboardOrder.cpp  LoginProvider.cpp  LoginRequest.cpp  LoginResponse.cpp  Package.cpp  Profile.cpp  ProfileGame.cpp  ProfileGroup.cpp  RefreshRequest.cpp  RegisterRequest.cpp  (+14 more)
(+64 files in other folders)
